<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Health IQ</string>
    <string name="health_iq">HEALTH IQ</string>
    <string name="your_health_is_our_concern">Your Health Is Our Concern</string>
    <string name="get_started">Get Started</string>
    <string name="health_conditions">HEALTH CONDITIONS</string>
    <string name="view_details">View Details</string>
    <string name="covid_19">COVID 19</string>
    <string name="high_cholesterol" tools:ignore="DuplicateDefinition">HIGH CHOLESTEROL</string>
    <string name="gout">GOUT</string>
    <string name="hypertension">HYPERTENSION</string>
    <string name="definition">Definition</string>
    <string name="high_blood_pressure_also_called_hypertension_is_blood_pressure_that_is_higher_than_normal">High blood pressure, also called hypertension, is blood pressure that is higher than normal</string>
    <string name="causes">Causes</string>
    <string name="a_diet_high_in_salt_fat_and_or_cholesterol"><![CDATA[-> A diet high in salt, fat, and/or cholesterol.]]></string>
    <string name="chronic_conditions_such_as_kidney_and_hormone_problems_diabetes_and_high_cholesterol"><![CDATA[-> Chronic conditions such as kidney and hormone problems, diabetes, and high cholesterol.]]></string>
    <string name="family_history_especially_if_your_parents_or_other_close_relatives_have_high_blood_pressure"><![CDATA[-> Family history, especially if your parents or other close relatives have high blood pressure]]></string>
    <string name="lack_of_physical_activity"><![CDATA[-> Lack of physical activity.]]></string>
    <string name="signs_and_symptoms">Signs And Symptoms</string>
    <string name="early_morning_headaches"><![CDATA[-> Early morning headaches]]></string>
    <string name="nosebleeds"><![CDATA[-> Nosebleeds]]></string>
    <string name="irregular_heart_rhythms"><![CDATA[-> Irregular heart rhythms]]></string>
    <string name="vision_changes"><![CDATA[-> Vision changes]]></string>
    <string name="buzzing_in_the_ears"><![CDATA[-> Buzzing in the ears]]></string>
    <string name="fatigue_nausea_vomiting_confusion_anxiety_chest_pain_and_muscle_tremors"><![CDATA[-> Fatigue, nausea, vomiting, confusion, anxiety, chest pain, and muscle tremors.]]></string>
    <string name="difficulty_breathing"><![CDATA[-> Difficulty breathing]]></string>
    <string name="treatment">Treatment</string>
    <string name="eat_healthy_foods_eat_a_heart_healthy_diet"><![CDATA[-> Eat healthy foods. Eat a heart-healthy diet.]]></string>
    <string name="decrease_the_salt_in_your_diet"><![CDATA[-> Decrease the salt in your diet]]></string>
    <string name="maintain_a_healthy_weight"><![CDATA[-> Maintain a healthy weight]]></string>
    <string name="increase_physical_activity"><![CDATA[-> Increase physical activity]]></string>
    <string name="limit_alcohol"><![CDATA[-> Limit alcohol.]]></string>
    <string name="don_t_smoke"><![CDATA[-> Don\'t smoke.]]></string>
    <string name="manage_stress"><![CDATA[-> Manage stress]]></string>
    <string name="monitor_your_blood_pressure_at_home"><![CDATA[-> Monitor your blood pressure at home.]]></string>
    <string name="preferred_diet_and_recipe">Preferred Diet and Recipe</string>
    <string name="we_are_providing_you_with_one_of_the_best_recipe_for_the_most_convenient_food_to_take_as_a_hypertension_patient_this_will_help_you_maintain_good_health_and_to_keep_fit_along_side_take_good_exercise">We are providing you with one of the best recipe for the most convenient food to take as a hypertension patient. This will help you maintain goog health and to keep fit along side take good exercise.</string>
    <string name="recipe">Recipe</string>
    <string name="help">HELP</string>
    <string name="get_help_from_a_medical_practitioner">Get Help From A Medical Practitioner</string>
    <string name="_254_20_2717077">: +254-20-2717077</string>
    <string name="ps_health_go_ke">: ps@health.go.ke</string>
    <string name="p_o_box_30016_00100_nairobi_kenya">: P.O. Box:30016–00100, Nairobi, Kenya</string>
    <string name="ministry_of_health_afya_house_cathedral_road">: Ministry of Health, Afya House, Cathedral Road</string>
    <string name="https_www_facebook_com_who">: https://www.facebook.com/WHO</string>
    <string name="https_www_twitter_com_who">: https://www.twitter.com/WHO</string>
    <string name="https_www_instagram_com_who">: https://www.instagram.com/who</string>
    <string name="https_www_linkedin_com_company_world_health_organization">: https://www.linkedin.com/company/world-health-organization</string>
    <string name="about_us">About Us</string>
    <string name="we_are_an_informative_application_and_organization_that_can_link_you_up_with_the_best_medical_places_nationwide_and_worldwide_as_per_your_inquiry"><![CDATA[-> We are an informative application and organization that can link you up with the best medical places nationwide and worldwide as per your inquiry.]]></string>
    <string name="we_are_set_out_to_create_awareness_about_some_health_conditions_that_most_us_may_be_suffering_from"><![CDATA[-> We are set out to create awareness about some health conditions that most us may be suffering from.]]></string>
    <string name="thank_you_for_choosing_us_your_informative_center">THANK YOU FOR CHOOSING US YOUR INFORMATIVE CENTER</string>
    <string name="diabetes">DIABETES</string>
    <string name="arthritis">ARTHRITIS</string>
    <string name="hypoglycemia">HYPOGLYCEMIA</string>
    <string name="kidney_disease">KIDNEY DISEASE</string>
    <string name="an_acute_respiratory_illness_in_humans_caused_by_a_coronavirus_capable_of_producing_severe_symptoms_and_in_some_cases_death_especially_in_older_people_and_those_with_underlying_health_conditions">An acute respiratory illness in humans caused by a coronavirus, capable of producing severe symptoms and in some cases death, especially in older people and those with underlying health conditions</string>
    <string name="infection_with_severe_acute_respiratory_syndrome_coronavirus_2_or_sars_cov_2_causes_coronavirus_disease_2019_covid_19"><![CDATA[-> Infection with severe acute respiratory syndrome coronavirus 2, or SARS-CoV-2, causes coronavirus disease 2019 (COVID-19).]]></string>
    <string name="shortness_of_breath"><![CDATA[-> Shortness of breath]]></string>
    <string name="a_cluster_of_digestive_symptoms_with_abdominal_pain"><![CDATA[-> A cluster of digestive symptoms with abdominal pain]]></string>
    <string name="one_respiratory_symptom_cluster_with_cough"><![CDATA[-> One respiratory symptom cluster with cough]]></string>
    <string name="sputum_in_cough"><![CDATA[-> Sputum in cough]]></string>
    <string name="vomiting"><![CDATA[-> Vomiting]]></string>
    <string name="diarrhea"><![CDATA[-> Diarrhea]]></string>
    <string name="a_musculoskeletal_symptom_cluster_with_muscle_and_joint_pain"><![CDATA[-> A musculoskeletal symptom cluster with muscle and joint pain]]></string>
    <string name="get_vaccinated"><![CDATA[-> Get Vaccinated]]></string>
    <string name="antiviral_medications"><![CDATA[-> Antiviral medications]]></string>
    <string name="breathing_support_such_as_mechanical_ventilation"><![CDATA[-> Breathing support, such as mechanical ventilation]]></string>
    <string name="blood_plasma_transfusions"><![CDATA[-> Blood plasma transfusions]]></string>
    <string name="steroids_to_help_reduce_lung_swelling_and_inflammation"><![CDATA[-> Steroids to help reduce lung swelling and inflammation]]></string>
    <string name="the_best_way_to_prevent_the_transmission_of_the_virus_is_to_avoid_or_limit_contact_with_people_who_are_showing_symptoms_of_covid_19_or_any_respiratory_infection"><![CDATA[-> The best way to prevent the transmission of the virus is to avoid or limit contact with people who are showing symptoms of COVID-19 or any respiratory infection.]]></string>
    <string name="eat_healthy_foods"><![CDATA[-> Eat healthy foods]]></string>
    <string name="we_are_providing_you_with_one_of_the_best_recipe_for_the_most_convenient_food_to_take_as_a_covid_19_patient_this_will_help_you_maintain_good_health_and_to_keep_fit_along_side_take_good_exercise">We are providing you with one of the best recipe for the most convenient food to take as a Covid 19 patient this will help you maintain good health and to keep fit along side take good exercise</string>
    <string name="overweight"><![CDATA[-> Overweight]]></string>
    <string name="obesity" tools:ignore="DuplicateDefinition"><![CDATA[-> Obesity]]></string>
    <string name="an_inactive_lifestyle"><![CDATA[-> An inactive lifestyle]]></string>
    <string name="sugar_sweetened_beverages"><![CDATA[-> Sugar-sweetened beverages]]></string>
    <string name="canned_mackerel_with_vegetables">Canned Mackerel with Vegetables</string>
    <string name="ingredients">Ingredients:</string>
    <string name="_2_15_ounce_cans_mackerel"><![CDATA[-> 2 (15 ounce) cans mackerel]]></string>
    <string name="_1_medium_onion"><![CDATA[-> 1 medium onion]]></string>
    <string name="_1_12_ounce_can_green_beans"><![CDATA[-> 1 (12 ounce) can green beans]]></string>
    <string name="_1_small_head_cabbage_6_cups_sliced"><![CDATA[-> 1 small head cabbage (6 cups sliced)]]></string>
    <string name="_1_teaspoon_oil"><![CDATA[-> 1 teaspoon oil]]></string>
    <string name="directions">Directions</string>
    <string name="open_mackerel_cans_and_drain_off_liquid"><![CDATA[-> Open mackerel cans and DRAIN off liquid]]></string>
    <string name="open_and_drain_green_beans"><![CDATA[-> Open and DRAIN green beans.]]></string>
    <string name="dice_onion_slice_cabbage"><![CDATA[-> DICE onion. SLICE cabbage]]></string>
    <string name="in_a_large_pan_heat_oil"><![CDATA[-> In a large pan, heat oil.]]></string>
    <string name="add_onions_and_cook_until_tender"><![CDATA[-> ADD onions and COOK until tender.]]></string>
    <string name="add_mackerel_and_break_into_chunks"><![CDATA[-> ADD mackerel and break into chunks.]]></string>
    <string name="add_cabbage_and_green_beans_cook_covered_until_tender_approximately_5_minutes"><![CDATA[-> ADD cabbage and green beans. COOK covered until tender, (approximately 5 minutes).]]></string>
    <string name="_4_5_ounce_center_cut_salmon_fillets_about_1_inch_thick_skin_on_or_off"><![CDATA[-> 4 (5-ounce) center-cut salmon fillets (about 1-inch-thick), skin on or off]]></string>
    <string name="_2_tablespoons_olive_oil"><![CDATA[-> 2 tablespoons olive oil]]></string>
    <string name="kosher_salt_and_freshly_ground_black_pepper"><![CDATA[-> Kosher salt and freshly ground black pepper]]></string>
    <string name="bring_the_salmon_to_room_temperature_10_minutes_before_cooking"><![CDATA[-> Bring the salmon to room temperature 10 minutes before cooking]]></string>
    <string name="warm_a_large_nonstick_skillet_with_oil_over_medium_low_heat_season_the_fish_with_salt_and_pepper_raise_the_heat_to_medium_high_place_the_salmon_skin_side_up_in_the_pan_cook_until_golden_brown_on_1_side_about_4_minutes_turn_the_fish_over_with_a_spatula_and_cook_until_it_feels_firm_to_the_touch_and_the_skin_is_crisp_if_desired_about_3_minutes_more"><![CDATA[-> Warm a large nonstick skillet with oil over medium-low heat. Season the fish with salt and pepper. Raise the heat to medium-high. Place the salmon, skin-side up in the pan. Cook until golden brown on 1 side, about 4 minutes. Turn the fish over with a spatula, and cook until it feels firm to the touch and the skin is crisp if desired, about 3 minutes more.]]></string>
    <string name="the_skin_can_be_served_or_removed_easily_with_a_knife_or_spoon"><![CDATA[-> The skin can be served or removed easily with a knife or spoon.]]></string>
    <string name="transfer_to_a_plate_and_serve_as_desired"><![CDATA[-> Transfer to a plate and serve as desired.]]></string>
    <string name="pan_fried_salmon">Pan-Fried Salmon</string>
</resources>