<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#F0D4D1"
    android:layout_height="match_parent"
    tools:context=".ui.Hypertension">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="200dp"
                android:backgroundTint="#9E7975"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/canned_mackerel_with_vegetables"
                    />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/macherel"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_15_ounce_cans_mackerel"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_teaspoon_oil"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_small_head_cabbage_6_cups_sliced"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_medium_onion"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_12_ounce_can_green_beans"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />




            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/directions"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_mackerel_cans_and_drain_off_liquid"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_and_drain_green_beans"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dice_onion_slice_cabbage"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_a_large_pan_heat_oil"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_onions_and_cook_until_tender"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_mackerel_and_break_into_chunks"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cabbage_and_green_beans_cook_covered_until_tender_approximately_5_minutes"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />






            </LinearLayout>



        </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>