<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#F0D4D1"
    android:layout_height="match_parent"
    tools:context=".ui.Hypertension">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="200dp"
                android:backgroundTint="#9E7975"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/pan_fried_salmon"
                    />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/hchol"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_5_ounce_center_cut_salmon_fillets_about_1_inch_thick_skin_on_or_off"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_tablespoons_olive_oil"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kosher_salt_and_freshly_ground_black_pepper"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />



            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/directions"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bring_the_salmon_to_room_temperature_10_minutes_before_cooking"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warm_a_large_nonstick_skillet_with_oil_over_medium_low_heat_season_the_fish_with_salt_and_pepper_raise_the_heat_to_medium_high_place_the_salmon_skin_side_up_in_the_pan_cook_until_golden_brown_on_1_side_about_4_minutes_turn_the_fish_over_with_a_spatula_and_cook_until_it_feels_firm_to_the_touch_and_the_skin_is_crisp_if_desired_about_3_minutes_more"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/the_skin_can_be_served_or_removed_easily_with_a_knife_or_spoon"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_to_a_plate_and_serve_as_desired"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>