<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9E7975"
    tools:context=".MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/healthcare"
       android:layout_marginStart="10dp"
       tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/health_iq"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_health_is_our_concern"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/getStarted"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:backgroundTint="#E35F4B"
        android:layout_width="150dp"
        android:layout_marginStart="15dp"
        android:layout_height="60dp"
        android:text="@string/get_started"
        />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>